--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,12 @@
     <string name="food_ordered">已点菜品</string>
     <string name="order_watch">查看订单</string>
     <string name="call_service">呼叫服务</string>
+    <string name="start_real_time_update">启动实时更新</string>
 
     <string name="commit_acount">提交订单</string>
     <string name="check_out_acount">结账</string>
+    <string name="remarks">备注</string>
+
+    <string name="help_phone">5554</string>
+    <string name="help_message">test scos helper</string>
 </resources>
