基本完成，实时更新和开机自启动待测试

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
 
     <string name="help_phone">5554</string>
     <string name="help_message">test scos helper</string>
+
+    <string name="notification_cancel">清除</string>
 </resources>
