基本完成，开机自启动未能成功

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="help_message">test scos helper</string>
 
     <string name="notification_cancel">清除</string>
+    <string name="notification_new_food">新品上架</string>
 </resources>
